force-app/main/default/objects/ScratchOrgInfo/ScratchOrgInfo.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>