force-app/main/default/objects/ScratchOrgInfo/fields/Pool_allocation_status__c.field-meta.xml
<CustomField>
    <fullName>Pool_allocation_status__c</fullName>
    <description>Status of the scratch org in the pool.</description>
    <inlineHelpText>Pool status.
In Progress - Scratch pool being prepared
Under Update - Is under update
Failed - Creation or update failed
Assigned - Assigned to user and in use.</inlineHelpText>
    <label>Pool allocation status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in_progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>available</fullName>
                <label>Available</label>
            </value>
            <value>
                <fullName>under_update</fullName>
                <label>Under Update</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>assigned</fullName>
                <label>Assigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>