force-app/main/default/objects/ScratchOrgInfo/fields/Pool_claim_token__c.field-meta.xml
<CustomField>
    <fullName>Pool_claim_token__c</fullName>
    <description
  >Token added by fetch method to claim a scratch org to settle claim race.

Connected to validation rule &quot;Pool_Claim_Token_Validation&quot;.</description>
    <label>Pool claim token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>