force-app/main/default/objects/ScratchOrgInfo/fields/Pool_tag__c.field-meta.xml
<CustomField>
    <fullName>Pool_tag__c</fullName>
    <description
  >Name of the pool a scratch org belongs to. If blank the scratch org do not belong to a pool.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >Name of the pool a scratch org belongs to. If blank the scratch org do not belong to a pool.</inlineHelpText>
    <label>Pool tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>