force-app/main/default/objects/ScratchOrgInfo/fields/Sfdx_Auth_Url__c.field-meta.xml
<CustomField>
    <fullName>Sfdx_Auth_Url__c</fullName>
    <description
  >The Sfdx auth url provided to this org upon creation. Used when claiming org and then removed.</description>
    <inlineHelpText
  >The Sfdx auth url provided to this org upon creation. Used when claiming org and then removed.</inlineHelpText>
    <label>SFDX Auth Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>