force-app/main/default/objects/ScratchOrgInfo/recordTypes/Scratch_org.recordType-meta.xml
<RecordType>
    <fullName>Scratch_org</fullName>
    <active>true</active>
    <description>For scratch orgs not part of any pool</description>
    <label>Scratch org</label>
</RecordType>