force-app/main/default/objects/ScratchOrgInfo/recordTypes/Scratch_pool_org.recordType-meta.xml
<RecordType>
    <fullName>Scratch_pool_org</fullName>
    <active>true</active>
    <description>Record is part of a scratch pool</description>
    <label>Scratch pool org</label>
</RecordType>